--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <meta name="twitter:title" content="LiveCSSPlay - By Zack">
   <meta name="twitter:description"
     content="LiveCSSPlay is a browser-based tool that allows you to write HTML and CSS code separately, with each frame representing a piece of CSS code. You can play these frames step by step, creating an animation-like effect and applying each CSS frame code to your HTML skeleton in real-time. This enables you to watch the live HTML styling in action">
-  <meta name="twitter:image" content="./src/assets/livecssplay.png">
+  <meta name="twitter:image" content="livecssplay.png">
 
   <link rel="icon" type="image/svg+xml" href="favicon-de1cbade.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LiveCSSPlay - By Zack</title>
-  <script type="module" crossorigin src="index-1016ec7d.js"></script>
+  <script type="module" crossorigin src="index-491d1239.js"></script>
   <link rel="stylesheet" href="index-3233da07.css">
 </head>
 
