--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5VTTDS33FY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5VTTDS33FY');
+</script>
   <meta charset="UTF-8" />
   <meta name="author" content="Zack @ispaghetticode">
   <meta name="description"
