--- a/index.html
+++ b/index.html
@@ -2,35 +2,34 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5VTTDS33FY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5VTTDS33FY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-5VTTDS33FY');
-</script>
+    gtag('config', 'G-5VTTDS33FY');
+  </script>
   <meta charset="UTF-8" />
   <meta name="author" content="Zack @ispaghetticode">
   <meta name="description"
-    content="LiveCSSPlay is a browser-based tool that allows you to write HTML and CSS code separately, with each frame representing a piece of CSS code. You can play these frames step by step, creating an animation-like effect and applying each CSS frame code to your HTML skeleton in real-time. This enables you to watch the live HTML styling in action">
+    content="Write your CSS code piece by piece instead of all at once and watch your HTML document being styled one step at a time">
   <meta name="keywords" content="LiveCSSPlay, CSS, HTML, animation, web development, coding">
   <!-- meata tags -->
   <meta property="og:title" content="LiveCSSPlay - By Zack">
   <meta property="og:description"
-    content="LiveCSSPlay is a browser-based tool that allows you to write HTML and CSS code separately, with each frame representing a piece of CSS code. You can play these frames step by step, creating an animation-like effect and applying each CSS frame code to your HTML skeleton in real-time. This enables you to watch the live HTML styling in action">
+    content="Write your CSS code piece by piece instead of all at once and watch your HTML document being styled one step at a time">
   <meta property="og:image" content="livecssplay.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="LiveCSSPlay - By Zack">
   <meta name="twitter:description"
-    content="LiveCSSPlay is a browser-based tool that allows you to write HTML and CSS code separately, with each frame representing a piece of CSS code. You can play these frames step by step, creating an animation-like effect and applying each CSS frame code to your HTML skeleton in real-time. This enables you to watch the live HTML styling in action">
+    content="Write your CSS code piece by piece instead of all at once and watch your HTML document being styled one step at a time">
   <meta name="twitter:image" content="livecssplay.png">
 
   <link rel="icon" type="image/svg+xml" href="favicon-de1cbade.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LiveCSSPlay - By Zack</title>
-  <script type="module" crossorigin src="index-7af02f93.js"></script>
+  <script type="module" crossorigin src="index-90a28ca4.js"></script>
   <link rel="stylesheet" href="index-3233da07.css">
 </head>
 
