--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <meta property="og:title" content="LiveCSSPlay - By Zack">
   <meta property="og:description"
     content="Write your CSS code piece by piece instead of all at once and watch your HTML document being styled one step at a time">
-  <meta property="og:image" content="/livecssplay/assets/livecssplay.jpg">
+  <meta property="og:image" content="https://ispaghetticode.github.io/livecssplay/assets/livecssplay.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="LiveCSSPlay - By Zack">
   <meta name="twitter:description"
     content="Write your CSS code piece by piece instead of all at once and watch your HTML document being styled one step at a time">
-  <meta name="twitter:image" content="/livecssplay/assets/livecssplay.jpg">
+  <meta name="twitter:image" content="https://ispaghetticode.github.io/livecssplay/assets/livecssplay.jpg">
 
   <link rel="icon" type="image/svg+xml" href="/livecssplay/assets/favicon-8482f1d0.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
